--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-EditorStartupMap=/Game/Lesson3C/DefaultMap.DefaultMap
+GameDefaultMap=/Game/Lesson3C/Maps/Gym/DefaultGym.DefaultGym
+EditorStartupMap=/Game/Lesson3C/Maps/Gym/DefaultGym.DefaultGym
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
