--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,3 +15,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Lesson3C")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="Lesson3CGameModeBase")
 
+[Core.Log]
+LogCameras=VeryVerbose
