sprint - blueprints to code

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,3 +17,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [Core.Log]
 LogCameras=VeryVerbose
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/Lesson3C.PlayerCharacter.UpdateSprint",NewName="/Script/Lesson3C.PlayerCharacter.UpdateSprintCamera")
